fix(tooltip): vertical spacing and tip hairline gap

--- a/components/tooltip/index.css
+++ b/components/tooltip/index.css
@@ -72,8 +72,6 @@ governing permissions and limitations under the License.
   width: auto;
   padding-inline-start: var(--spectrum-tooltip-spacing-inline-start);
   padding-inline-end: var(--spectrum-tooltip-spacing-inline-end);
-  padding-block-start: var(--spectrum-tooltip-spacing-block-start);
-  padding-block-end: var(--spectrum-tooltip-spacing-block-end);
 
   //margin: var(--spectrum-tooltip-spacing-container);
 
@@ -145,7 +143,8 @@ governing permissions and limitations under the License.
 
   background-color: var(--spectrum-tooltip-background-color-default);
 
-  clip-path: polygon(0 0, 50% 100%, 100% 0);
+  /* clip path has -5% to avoid hairline gap */
+  clip-path: polygon(0 -5%, 50% 100%, 100% -5%);
 }
 
 .spectrum-Tooltip--right,
@@ -222,6 +221,8 @@ governing permissions and limitations under the License.
 .spectrum-Tooltip-label {
   /* Make sure line height is correct to prevent problems in Windows */
   line-height: var(--spectrum-tooltip-line-height);
+  margin-block-start: var(--spectrum-tooltip-spacing-block-start);
+  margin-block-end: var(--spectrum-tooltip-spacing-block-end);
 }
 
 /* CSS open animation */
